--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
     "@angular/animations": "^8.0.0",
     "@angular/cdk": "^8.0.0",
     "@angular/cli": "~8.0.0",
@@ -27,7 +26,7 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "chart.js": "^2.8.0",
-    "core-js": "^2.5.4",
+    "core-js": "^3.1.3",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
@@ -39,22 +38,23 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.800.0",
     "@angular/language-service": "~8.0.0",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "enhanced-resolve": "^3.3.0",
-    "jasmine-core": "~2.99.1",
+    "@types/node": "~12.0.3",
+    "codelyzer": "~5.0.1",
+    "enhanced-resolve": "^4.1.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
+    "ts-node": "~8.2.0",
+    "tslint": "~5.16.0"
   },
   "engines": {
     "node": "~12.3.1",
