--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "newrelic": "^5.9.1",
     "ng2-charts": "^2.2.4",
     "path": "^0.12.7",
     "rxjs": "~6.5.2",
